{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 63,
  "lineage": "d0fb0a93-5743-9bdc-3065-9518ec2b8469",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.173.24.88",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-07-31T06:39:35.658-07:00",
            "id": "projects/nginxdev-test/regions/us-central1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "nginxdev-test",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/regions/us-central1/addresses/vm-public-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/nginxdev-test/zones/us-central1-c/instances/nginx-ubuntu"
            ]
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-31T06:39:22.383-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nginxdev-test/global/firewalls/fw-externalssh",
            "log_config": [],
            "name": "fw-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/global/networks/default",
            "priority": 1000,
            "project": "nginxdev-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/global/firewalls/fw-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserver-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-31T06:39:22.385-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nginxdev-test/global/firewalls/http-webserver",
            "log_config": [],
            "name": "http-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/global/networks/default",
            "priority": 1000,
            "project": "nginxdev-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/global/firewalls/http-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220810",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/zones/us-central1-c/disks/nginx-ubuntu"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "devopstesting.tk",
            "id": "projects/nginxdev-test/zones/us-central1-c/instances/nginx-ubuntu",
            "instance_id": "8094106635475909483",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "nishikantjha0011:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCNPZuB1Pr6s/BX/hxY0YMGiNIUAB9NSUdzqr5PnPDV0+PC14oofhHifilB3MUnC8URIN/f7+sW9OWmd4TYlz73an8haXWPaVbt0V2smaWnPQdxctEZObMnS4xSKuQj0DkKzyu/AtkdaCA0fU2JEty5lQfEVyr4dqmS9OZ8IliJVab283iwH/gCTw2knuVqNu/XQojKbcyMn1IJXj8hscb+urcC5r2TSQQBhBHiEv8fpV8SyURM/i9/7BkedQVED7WwMmCduTYveEArBDrf7vjlClf29hX3m3uhP29a60inyJKsoOjB0cFEfhh5FdEyecw5Z+RRjPYAszQr+MlMgQ1WA9Tcx8Wlcs2s0PyKCeIhLxwnBFTTIVbuMiNwOdlDTzeNtUyytZdjnBSxxCDFEjM6RppEuwZvBO0r [...]
            },
            "metadata_fingerprint": "4Jr0ZrP4Kg0=",
            "metadata_startup_script": "#!/bin/bash\nset -e\necho \"*****    Installing Nginx    *****\"\napt update\napt install -y nginx\nufw allow 'Nginx HTTP'\nsystemctl enable nginx\nsystemctl restart nginx\nsudo snap install core; sudo snap refresh core\nsudo apt-get remove certbot\nsudo snap install --classic certbot\nsudo ln -s /snap/bin/certbot /usr/bin/certbot\nsudo certbot run -n --nginx --agree-tos -d devopstesting.tk -m nishikantjha0011@gmail.com --redirect\n#sudo certbot run -n --n [...]
            "name": "nginx-ubuntu",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.24.88",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/global/networks/default",
                "network_ip": "10.128.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/regions/us-central1/subnetworks/default",
                "subnetwork_project": "nginxdev-test"
              }
            ],
            "project": "nginxdev-test",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nginxdev-test/zones/us-central1-c/instances/nginx-ubuntu",
            "service_account": [
              {
                "email": "terraform-account@nginxdev-test.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "http-server",
              "webserver"
            ],
            "tags_fingerprint": "VTnUAHQ0zhI=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "data.template_file.nginx",
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserver-fw"
          ]
        }
      ]
    }
  ]
}